fix the expanding schedule on mobile

--- a/styles/_schedule.scss
+++ b/styles/_schedule.scss
@@ -21,6 +21,24 @@
         display: none;
         position: relative;
 
+        .schedule-content-wrapper {
+            overflow: hidden;
+            max-height: 50vh;
+
+            transition: max-height .5s ease-in-out, mask-image .5s ease-in-out;
+
+            -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
+            mask-image: linear-gradient(to bottom, rgba(0,0,0,1) 50%, rgba(0,0,0,0) 95%);
+        }
+
+        .expanded {
+            .schedule-content-wrapper {
+                max-height: 200vh;
+                mask-image: none;
+                -webkit-mask-image: none;
+            }
+        }
+
         .button-div {
             position: absolute;
             bottom: -20px;
